--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 @import "utilities";
 @import "components";
 @import "mixins";
+@import "function";
 @import "base";
 @import "login-portal";
 @import "layout";
