--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -1,7 +1,7 @@
 /***********************************
             BASIC RESET
 ***********************************/
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 *,
 *::before,
 *::after {
@@ -29,13 +29,13 @@ html {
 body {
     text-rendering: optimizeLegibility;
     box-sizing: border-box;
-    font-family: "Open+Sans", sans-serif !important;
+    font-family: "Open Sans", sans-serif !important;
     font-weight: 400;
     line-height: 1.7;
     color: $text;
     font-size: 1.2rem !important;
     background: $body-bg !important;
-    min-height: 100vh;
+    min-height: 100vh !important;
 }
 a,
 a:active {
