--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -15,10 +15,11 @@
     justify-content: center;
     align-items: center;
     background-image: repeating-linear-gradient(
-            rgba(0, 0, 0, 0.644),
-            rgba(0, 0, 0, 0.623)
+            rgba($main, 0.644),
+            rgba($main-1, 0.623)
         ),
         url("/storage/bgs/profile_bg.jpg");
+    background-position: center;
     & > .p-text {
         width: 100%;
         height: inherit;
@@ -80,8 +81,8 @@
     }
 }
 .kpi__table__wrapper {
-    width: 95%;
-    margin: 2rem auto;
+    width: 100%;
+    // margin: 2rem auto;
 }
 .kpi__table {
     width: 100%;
