--- a/resources/sass/_staff-directory.scss
+++ b/resources/sass/_staff-directory.scss
@@ -1,37 +1,50 @@
 .staff__directory__container {
     width: 60%;
+    min-height: 100%;
+    @include respond-up(lg) {
+        width: 60%;
+    }
+    @include respond-down(md) {
+        width: 80%;
+    }
+    @include respond-down(sm) {
+        width: 90%;
+    }
     margin: 0 auto;
-    padding: 5rem 0;
-
-    &__results {
+    position: relative;
+    &__search {
         width: 100%;
-        margin-top: 3rem;
+        height: 7rem;
+        background-color: $body-bg;
+        position: sticky;
+        top: 5.5rem;
+        left: 0;
+        z-index: 100;
         display: flex;
-        flex-wrap: wrap;
-        flex-shrink: 1;
-        justify-content: flex-start;
-        align-items: flex-start;
+        justify-content: center;
+        align-items: center;
+    }
+    &__results {
+        @include grid-row;
         &__card {
-            width: 16rem;
-            height: 21rem;
+            @include grid-column(
+                $width: 25%,
+                $height: 23rem,
+                $gutter: $column-gutter-1
+            );
+            @include card-bg;
+            @include respond-only(xs) {
+                width: column-width(50%, $column-gutter-1);
+            }
+
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-            background-color: #fff;
-            border-radius: 3px;
-            -webkit-box-shadow: -8px 2px 52px -8px rgba(238, 238, 238, 0.95);
-            -moz-box-shadow: -8px 2px 52px -8px rgba(238, 238, 238, 0.95);
-            box-shadow: -8px 2px 52px -8px rgba(238, 238, 238, 0.95);
-            padding: 1rem;
-            margin-bottom: 1rem;
-            &:not(:last-child) {
-                margin-right: 1rem;
-            }
             & > .avatar {
                 background-color: #eee;
-                width: 6rem;
-                height: 6rem;
+                width: 8rem;
+                height: 8rem;
                 border-radius: 99999px;
                 & > img {
                     width: 100%;
@@ -40,7 +53,7 @@
                 }
             }
             & > .info {
-                width: inherit;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
