--- a/resources/sass/_staff-profile.scss
+++ b/resources/sass/_staff-profile.scss
@@ -7,10 +7,11 @@
         justify-content: flex-end;
         align-items: flex-start;
         background-image: repeating-linear-gradient(
-                rgba(0, 0, 0, 0.644),
-                rgba(0, 0, 0, 0.623)
+                rgba($main, 0.644),
+                rgba($main-1, 0.623)
             ),
             url("/storage/bgs/profile_bg.jpg");
+        background-position: center;
         & > .p-text {
             width: 100%;
             height: inherit;
