--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -29,6 +29,7 @@ $primary: #167df0;
 $max-width: 100%;
 $row-gutter: 1rem;
 $column-gutter: 1rem;
+$column-gutter-1: 0.5rem;
 
 $datepicker-item-selected-background-color: rgba(
     13,
