--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -110,3 +110,12 @@
     // padding-left: 23rem;
     // margin-top: 2rem;
 }
+.table-avatar {
+    width: 4rem;
+    height: 4rem;
+    & > img {
+        width: 100%;
+        height: 100%;
+        border-radius: 99999px;
+    }
+}
