--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -5,8 +5,8 @@
     justify-content: flex-start;
     align-items: center;
     &__main {
-        width: 15rem;
-        height: 4rem;
+        // width: 15rem;
+        height: 5rem;
         margin-left: 2rem;
         & > img {
             width: 100%;
