--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -88,6 +88,14 @@
     width: 100%;
     height: inherit;
 }
+.kpi__table__single {
+    width: 50%;
+    // padding: 0 25%;
+    height: inherit;
+}
+.kpi__goals__td {
+    width: 33.333%;
+}
 
 .kpi_goals__wrapper {
     & .goal__btns {
@@ -96,11 +104,19 @@
         justify-content: space-between;
         align-items: center;
     }
+    & > .content {
+        & > ol {
+            // list-style-type: none !important;
+            padding: 0 0 0 1rem;
+            margin-left: 0 !important;
+        }
+    }
 }
 .step__buttons {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    padding: 2rem 0 0 1rem;
 
     & > button:first-child {
         margin-right: 1rem;
